src/styles/ServicesView.css
.services-view {
	min-width: 1282px;
}

/* =================== Heading =================== */
.services-view-heading-container {
	padding-top: 78px;
}

/* =================== Service View ============== */
.service-view {
	display: flex; 
  align-items: center;
  flex-direction: row; 
  justify-content: center;
	height: 405.75px;
	width: 100%;
} 

.service-view-wide .service-icon {
	margin: 0 10%;
}

.service-view-wide .service-info-box {
	margin: 0 10%;
}

.service-view-slim .service-icon {
	margin: 0 5%;
}

.service-view-slim .service-info-box {
	margin: 0 5%;
}

/* =================== Info Box ================== */
.service-info-box { 
	display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  white-space: nowrap;
}

.service-info-box-heading {
	margin-bottom: 16px;
}

.service-info-box-text {
	margin-bottom: 16px;
}

.service-info-button-container { 
  margin-bottom: 18px;
  margin-left: 16px;
  margin-right: 16px;
  text-align: center;
}

.service-info-button-container:last-child {
	margin-right: 0;
}

.rows-container {
	flex-grow: 1; 
	display: flex;
	flex-direction: column;
}

.two-row {
	display: flex;
	height: 50%; 
}	

.center {
	display: flex;
	justify-content: center;
}

